--- a/css/style.css
+++ b/css/style.css
@@ -137,33 +137,76 @@ section{
     transform: scale(1.1);
     box-shadow:  0 0 20px var(--main-color);
 }
-.btn{
-    display: inline-block;
-    padding: 11px 26px;
-    background: var(--main-color);
-    color: var(--bg-color);
-    border: 2px solid var(--main-color);
-    border-radius: 8px;
-    font-size: 15px;
-    font-weight: 600;
-    transition: all .50s ease;
-}
-.btn:hover{
+
+  /* button */
+    .main-btn{
+        display: flex;
+        align-items: center;
+        gap: 20px;
+    }
+  .btn {
+    padding: 15px 30px;
+    border: 1px solid var(--main-color);
+    outline: none;
+    color: #FFF;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 12px;
+  }
+  .btn::after {
+    content: "";
+    z-index: -1;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: var(--bg-color);
+    left: 0;
+    top: 0;
+    border-radius: 12px;
+  }
+  /* glow */
+  .btn::before {
+    content: "";
+    background: linear-gradient(
+      45deg,
+      #FF0000, #FF7300, #FFFB00, #48FF00,
+      #00FFD5, #002BFF, #FF00C8, #FF0000
+    );
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    background-size: 600%;
+    z-index: -1;
+    width: calc(100% + 4px);
+    height:  calc(100% + 4px);
+    filter: blur(8px);
+    animation: glowing 20s linear infinite;
+    transition: opacity .3s ease-in-out;
+    border-radius: 13px;
+    opacity: 0;
+  }
+  
+  @keyframes glowing {
+    0% {background-position: 0 0;}
+    50% {background-position: 400% 0;}
+    100% {background-position: 0 50%;}
+  }
+  
+  /* hover */
+  .btn:hover::before {
+    opacity: 1;
+  }
+  
+  .btn:active:after {
     background: transparent;
-    color: var(--main-color);
-    box-shadow: 0 0 20px var(--main-color);
-}
-.btn2{
-    background: transparent;
-    color: var(--main-color);
-    border: 2px solid var(--main-color);
-    margin-left: 15px;
-    transition: all .50s ease;
-}
-.btn2:hover{
-    background: var(--main-color);
-    color: var(--bg-color);
-}
+  }
+  
+  .btn:active {
+    color: #000;
+    font-weight: bold;
+  }
+
 header.sticky{
     background: var(--bg-color);
     box-shadow: 0 .1rem rgba(0, 0, 0, .2);
